# house-rent-regression-prediction

./: analise_exploratoria.ipynb  house-rent-regression.ipynb  main.py  pyproject.toml
decision-tree/: decision-tree.ipynb
knn/: knn.ipynb
linear-regression/: linear-regression.ipynb
naive-bayes/: naive-bayes.ipynb
